--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
 </head>
 <body>
     <main>
-    <form action="get">
-        <label for="mail">E-mail</label>
-        <input name="mail" id="mail" type="mail" placeholder="Example@gmail.fr">
-        <label for="password">Password</label>
-        <input name="passowrd" id="password" type="password" placeholder="*********">
-        <button>Registration</button>
-    </form>
+        <div class="container">
+            <div class="img">
+                <img src="/mokoProject/img/firstpage.jpg" alt="Two girls in festival">
+            </div>
+        </div>
+        <form action="get">
+            <h1 class="form__title">Registration</h1>
+            <div class="form__group">
+                <div class="form__item">
+                    <label for="mail">E-mail</label>
+                    <input name="mail" id="mail" type="mail" placeholder="Example@gmail.fr">
+                </div>
+                <div class="form__item">
+                    <label for="password">Password</label>
+                    <input name="password" id="password" type="password" placeholder="*********">
+                </div>
+            </div>
+            <button>Send</button>
+        </form>
     </main>
 </body>
 </html>
