feat:i do resset all files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Moko</title>
 </head>
 <body>
-    <main>
+    <main>  
+        <div class="img__wrapper">
+            <img src="/mokoProject/img/sideimg.jpg" alt="lobby img">
+        </div>
         <form action="get">
             <h1 class="form__title">Registration</h1>
             <div class="form__group">
