feat: add normalise.css

--- a/index.html
+++ b/index.html
@@ -3,28 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Moko</title>
+    <title>Document</title>
 </head>
 <body>
-    <main>  
-        <div class="img__wrapper">
-            <img src="/mokoProject/img/sideimg.jpg" alt="lobby img">
+    <header class="header">
+        <div class="logo">
+            <img src="/mokoProject/img/logo.jpg" alt="logo">
         </div>
-        <form action="get">
-            <h1 class="form__title">Registration</h1>
-            <div class="form__group">
-                <div class="form__item">
-                    <label for="mail">E-mail</label>
-                    <input name="mail" id="mail" type="mail" placeholder="Example@gmail.fr">
-                </div>
-                <div class="form__item">
-                    <label for="password">Password</label>
-                    <input name="password" id="password" type="password" placeholder="*********">
-                </div>
-            </div>
-            <button>Send</button>
-        </form>
-    </main>
+    </header>
 </body>
 </html>
